--- a/static/main.css
+++ b/static/main.css
@@ -1,26 +1,325 @@
-.jumbotron {
-  background: #532F8C;
+@media screen and (max-width: 1000px) {
+  .dont-show {
+    display: none;
+  }
+}
+
+@font-face {
+  font-family: 'benary';
+  src: url('PetMe1282Y.ttf');
+}
+
+@font-face {
+  font-family: 'musicnet';
+  src: url('MUSICNET.ttf');
+}
+
+#bckgrd-img {
+  background: url(/static/bckgrd.jpeg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#left-icon {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#right-icon {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#down-arrow {
+  position:absolute;
+  bottom:0%;
+  right:48%;
+}
+
+#fade-in-out-hover .fade-out-boy {
+  opacity: 1;
+  transition: 1s;
+}
+
+#fade-in-out-hover:hover .fade-out-boy {
+  opacity: 0 !important;
+}
+
+#fade-in-out-hover .fade-in-boy {
+  opacity: 0;
+  transition: 1s;
+}
+
+#fade-in-out-hover:hover .fade-in-boy {
+  opacity: 1 !important;
+}
+
+#white-boi {
+  width: 200px;
+  font-size: 150%;
   color: white;
-  padding-bottom: 80px; }
-  .jumbotron .btn-primary {
-    background: #845ac7;
-    border-color: #845ac7; }
-    .jumbotron .btn-primary:hover {
-      background: #7646c1; }
-  .jumbotron p {
-    color: #d9ccee;
-    max-width: 75%;
-    margin: 1em auto 2em; }
-  .navbar + .jumbotron {
-    margin-top: -20px; }
-  .jumbotron .lang-logo {
-    display: block;
-    background: #B01302;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    border: 2px solid white; }
-    .jumbotron .lang-logo img {
-      max-width: 100%; }
+}
+
+#white-boi:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  color: black;
+}
+
+.center-align {
+  display: flex;
+  justify-content: center;
+}
+
+.language-icon {
+  height: 100px;
+  width: 100px;
+  margin: 5%
+}
+
+.pointy {
+  cursor: pointer;
+}
+
+.primary {
+  color: #00d1b2;
+}
+
+.grey-bckgrd {
+  padding-top: 1% !important;
+  background: #1b1b1b;
+}
+
+.white-bckgrd {
+  padding-top: 1% !important;
+  background: whitesmoke;
+}
+
+.white-bckgrd-none {
+  background: whitesmoke;
+}
+
+.full-height {
+  height:100%;
+}
+
+.half-height {
+  overflow: hidden;
+  margin-top: 10px;
+  height: auto;
+}
+
+.big-height {
+  height: 115%;
+}
+
+.off-white {
+  color: antiquewhite;
+}
+
+.white-with-outline {
+  color:white !important;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black !important;
+}
+
+.big-white-with-outline {
+  color:white;
+  font-size: 100px !important;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.big-black {
+  color:black;
+  font-size: 100px !important;
+}
+
+.that-weird-icon {
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  top: 0px;
+  right: 0;
+}
+
+.white {
+  color: white;
+}
+
+.black {
+  color: black !important;
+}
+
+.timeline ul {
+  background: #1b1b1b;
+  padding: 50px 0;
+}
+
+.timeline ul li {
+  list-style-type: none;
+  position: relative;
+  width: 6px;
+  margin: 0 auto;
+  padding-top: 50px;
+  background: #fff;
+}
+
+.timeline ul li::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: inherit;
+}
+
+.timeline ul li div {
+  position: relative;
+  bottom: 0;
+  width: 400px;
+  padding: 15px;
+  background: #FFFFFF;
+}
+
+#sps-blue {
+  background: #00AAE5;
+}
+
+#prlb {
+  background-image: linear-gradient(to right, #84bd00, #84bd00 49%, #429DC9 49%);
+}
+
+#serenity-forge {
+  background: #dd7f30;
+}
+
+#st-olaf {
+  background-image: linear-gradient(to right, #eba224, #eba224 49%, #000000 49%);
+}
+
+#cherry-creek {
+  background-image: linear-gradient(to right, #3934fd, #3934fd 49%, #a40006 49%);
+}
+
+.timeline ul li div::before {
+  content: '';
+  position: absolute;
+  bottom: 7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+.timeline ul li:nth-child(odd) div {
+  left: 45px;
+}
+
+.timeline ul li:nth-child(odd) div::before {
+  left: -15px;
+  border-width: 8px 16px 8px 0;
+  border-color: transparent #FFFFFF transparent transparent;
+}
+
+#sps-blue::before {
+  border-color: transparent #00AAE5 transparent transparent !important;
+}
+
+#prlb::before {
+  border-color: transparent #429DC9 transparent !important;
+}
+
+#serenity-forge::before {
+  border-color: transparent #dd7f30 transparent !important;
+}
+
+#st-olaf::before {
+  border-color: transparent #000000 transparent !important;
+}
+
+#cherry-creek::before {
+  border-color: transparent #3934fd transparent !important;
+}
+
+.timeline ul li:nth-child(even) div {
+  left: -439px;
+}
+
+.timeline ul li:nth-child(even) div::before {
+  right: -15px;
+  border-width: 8px 0 8px 16px;
+}
+
+time {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+
+/* EFFECTS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.timeline ul li::after {
+  transition: background .5s ease-in-out;
+}
+
+.timeline ul li.in-view::after {
+  background: #00d1b2;
+}
+
+.timeline ul li div {
+  visibility: hidden;
+  opacity: 0;
+  transition: all .5s ease-in-out;
+}
+
+.timeline ul li:nth-child(odd) div {
+  transform: translate3d(200px, 0, 0);
+}
+
+.timeline ul li:nth-child(even) div {
+  transform: translate3d(-200px, 0, 0);
+}
+
+.timeline ul li.in-view div {
+  transform: none;
+  visibility: visible;
+  opacity: 1;
+}
+
+
+/* GENERAL MEDIA QUERIES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+@media screen and (max-width: 900px) {
+  .timeline ul li div {
+    width: 250px;
+  }
+  .timeline ul li:nth-child(even) div {
+    left: -289px;
+    /*250+45-6*/
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .timeline ul li {
+    margin-left: 20px;
+  }
+  .timeline ul li div {
+    width: calc(100vw - 91px);
+  }
+  .timeline ul li:nth-child(even) div {
+    left: 45px;
+  }
+  .timeline ul li:nth-child(even) div::before {
+    left: -15px;
+    border-width: 8px 16px 8px 0;
+    border-color: transparent #00AAE5 transparent transparent;
+  }
+}
