--- a/templates/header.tmpl.html
+++ b/templates/header.tmpl.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="/static/bulma.css">
   <link rel="stylesheet" href="/static/main.css">
-  <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/static/ECLogo.png" />
 
   <meta name="theme-color" content="#00d1b2">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
